--- a/escolar/core/templates/core/grupos_list.html
+++ b/escolar/core/templates/core/grupos_list.html
@@ -1,42 +1,42 @@
-{% extends 'base.html'%}
+{% extends "base.html" %}
+{% load bootstrap3 %}
 
-{% block page_title %}Grupos{% endblock page_title %}
+{% block page_title %}
+  <div class="page-header">
+  <!-- TODO erver esse br -->
+  <br>
+  Grupos
+  </div>
+{% endblock page_title %}
 
 {% block content %}
 
-<div class="container">
-
-  <table class="table table-striped">
-    {% if can_edit %}
-      <caption>
-         <div style="float:right; margin-right:10px">
-            <a href="{% url 'grupo_form' %}" class="btn btn-mini btn-success">Novo Grupo</a>
-         </div>
-      </caption>
-    {% endif %}
+<div class="row-fluid">
+  {% if can_edit %}
+  <a class="btn btn-success" href="{% url 'grupo_form' %}" class="btn btn-mini btn-success">Novo Grupo</a>
+  {% endif %}
+    <table class="table table-striped">
       <thead>
         <tr>
-            <th>Grupo</th>
+          <th>Grupo</th>
         </tr>
       </thead>
-
-      <tbody>
-      {% for grupo in grupos %}
+      {% for object in grupos %}
         <tr>
         {% if can_edit %}
-          <td> <a href="{% url 'grupo_form' grupo.pk %}">{{ grupo.name }}</a></td>
+          <td> <a href="{% url 'grupo_form' grupo.pk %}">{{ object.name }}</a></td>
         {% else %}
-          <td>{{ grupo.name }}</td>
+          <td>{{ object.name }}</td>
         {% endif %}
         </tr>
       {% empty %}
-            Nenhum grupo encontrado
+        <tr><td colspan="100%">Nenhum item disponível</td></tr>
       {% endfor %}
-      </tbody>
-  </table>
+    </table>
 </div>
 
 {% endblock content %}
 
-    {% block extra_js %}
-    {% endblock extra_js%}
+{% block extra_js %}
+{% endblock extra_js%}
+
