--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {% if user.is_authenticated %}
     <div class="container">
+      {% block page_title %}
 
+      {% endblock page_title %}
+    </div>
+    {% else %}
+    <div class="container">
     <div class="jumbotron">
       <div class="container">
         <h3>Gestão</h3>
@@ -51,7 +57,8 @@
       <hr>
 
       <footer>
-        <p>&copy; 2016 Company, Inc.</p>
+        <p>&copy; 2017 Company, Inc.</p>
       </footer>
     </div> <!-- /container -->
+    {% endif %}
 {% endblock content %}
