--- a/escolar/core/templates/core/usuario_form.html
+++ b/escolar/core/templates/core/usuario_form.html
@@ -2,11 +2,13 @@
 {% load bootstrap3 %}
 
 {% block page_title %}
+  <div class="page-header">
     {% if escola %}
         Cadastro de Usuários / Escola: {{ escola.nome }}
     {% else %}
        Cadastro de Usuários
     {% endif %}
+  </div>
 {% endblock page_title %}
 
 {% block content %}
@@ -15,18 +17,24 @@
   <form method="POST">
     {{ form.errors }}
     {% csrf_token %}
-    <div class="form-group center_div">
+    <div class="form-group">
       <div class="row">
-        {{ form.nome|as_bootstrap }}
-        {{ form.email|as_bootstrap }}
+        <div class="col-xs-9 col-sm-6 col-md-3">
+        {% bootstrap_field form.nome %}
+        {% bootstrap_field form.email %}
       </div>
-      <div class="row-fluid">
-          {{ form.grupo|as_bootstrap }}
-          {{ form.escola|as_bootstrap }}
       </div>
-      <div class="row-fluid">
-          {{ form.password1|as_bootstrap }}
-          {{ form.password2|as_bootstrap }}
+      <div class="row">
+        <div class="col-xs-9 col-sm-6 col-md-3">
+          {% bootstrap_field form.grupo %}
+          {% bootstrap_field form.escola %}
+        </div>  
+      </div>
+      <div class="row">
+        <div class="col-xs-9 col-sm-6 col-md-3">
+          {% bootstrap_field form.password1 %}
+          {% bootstrap_field form.password2 %}
+        </div>
       </div>
     </div>
     <div class="form-actions">
