ref #26 formulário de professor

--- a/escolar/escolas/templates/escolas/professor_form.html
+++ b/escolar/escolas/templates/escolas/professor_form.html
@@ -13,26 +13,25 @@
 {% block content %}
 <div class="container">
   {% include "base_adm.html" %}
-    <div class="row-fluid span10">
-        Nome: {{ professor.nome }}<br>
-        Email: {{ professor.email }}<br>
-        Data de ingresso na Escola: {{ form.instance.date_joined|date:"d/m/Y" }}
-        <form method="POST" enctype="multipart/form-data">
-          {{ form.errors }}
-            {% csrf_token %}
-            <div class="row-fluid">
-                <div class="controls cwell">
-                    <div class="row-fluid">
-                    {{ form.ativo|as_bootstrap }}
-                    </div>
-                </div>
-                <div class="form-actions">
-                    <input type="submit" value="Salvar" class="btn btn-primary">
-                    <a href="{% url 'professores_list' escola.id %}" class="btn btn-secondary">Cancelar</a>
-                </div>
-            </div>
-        </form>
-    </div>
+  <div class="row-fluid span10">
+    Nome: {{ professor.nome }}<br>
+    Email: {{ professor.email }}<br>
+    Data de ingresso na Escola: {{ form.instance.date_joined|date:"d/m/Y" }}
+    <form method="POST" >
+      {{ form.errors }}
+      {% csrf_token %}
+      <div class="form-group">
+        <div class="row">
+          <!-- {# Celular, Tablet, Computador #} -->
+          <div class="col-xs-9 col-sm-6 col-md-3">
+                {% bootstrap_field form.ativo %}
+          </div>
+        </div>
+      </div>
+      <input type="submit" value="Salvar" class="btn btn-primary">
+      <a href="{% url 'professores_list' escola.id %}" class="btn btn-secondary">Cancelar</a>
+    </form>
+  </div>
 </div>
 {% endblock content %}
 
