--- a/escolar/core/templates/base_aluno.html
+++ b/escolar/core/templates/base_aluno.html
@@ -6,5 +6,7 @@
     <li class="{{ tab_usuarios }}"><a href="#" id='id_usuarios'>Boletim</a></li>
     <li class="{{ tab_classes }}"><a href="#" id='id_classes'>Faltas</a></li>
     <li class="{{ tab_professores }}"><a href="#" id='id_professores'>Agenda</a></li>
+    <li class="{{ tab_professores }}"><a href="#" id='id_professores'>Contrato</a></li>
+ 	<li class="{{ tab_professores }}"><a href="#" id='id_professores'>Parcelas</a></li>
     {% endif %}
 </ul>
