--- a/escolar/escolas/templates/escolas/escola_form.html
+++ b/escolar/escolas/templates/escolas/escola_form.html
@@ -2,54 +2,57 @@
 {% load bootstrap3 %}
 
 {% block page_title %}
+  <div class="page-header center_div">
+    <!-- TODO erver esse br -->
+    <br>
     {% if escola %}
         Escola: {{ escola.nome }}
     {% else %}
         Cadastro de Escola
     {% endif %}
+  </div>
 {% endblock page_title %}
 
 
 {% block content %}
 
-<div class="container">
-   {% include "base_adm.html" %}
+  {% include "base_adm.html" %}
 
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="row-fluid span10">
-            <div class="controls cwell">
-                <div class="row-fluid">
-                    {{ form.pais|as_bootstrap }}
-                    {{ form.nome|as_bootstrap }}
-                    {{ form.endereco|as_bootstrap }}
-                    {{ form.numero|as_bootstrap }}
-                </div>
-                <div class="row-fluid">
-                    {{ form.telefone|as_bootstrap }}
-                    {{ form.complemento|as_bootstrap }}
-                    {{ form.bairro|as_bootstrap }}
-                </div>
-                <div class="row-fluid">
-                    {{ form.slug|as_bootstrap }}
-                    {{ form.site|as_bootstrap }}
-                    {{ form.logo|as_bootstrap }}
-                </div>
-                <div class="row-fluid">
-                    {{ form.description|as_bootstrap }}
-                </div>
-            </div>
-            <div class="form-actions">
-                <input type="submit" value="Salvar" class="btn btn-primary">
-                {% if escola %}
-                    <a href="{% url 'escola_cadastro' escola.id %}" class="btn btn-secondary">Cancelar</a>
-                {% else %}
-                    <a href="{% url 'escolas_list' %}" class="btn btn-secondary">Cancelar</a>
-                {% endif%}
-            </div>
+  <form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div class="form-group center_div">
+      <div class="row">
+        <!-- {# Celular, Tablet, Computador #} -->
+        <div class="col-xs-9 col-sm-6 col-md-3">
+          {% bootstrap_field form.pais %}
+          {% bootstrap_field form.nome %}
+          {% bootstrap_field form.endereco %}
+          {% bootstrap_field form.numero %}
         </div>
-    </form>
-</div>
+        <div class="col-xs-9 col-sm-6 col-md-3">
+          {% bootstrap_field form.telefone %}
+          {% bootstrap_field form.complemento %}
+          {% bootstrap_field form.bairro %}
+        </div>
+        <div class="col-xs-9 col-sm-6 col-md-3">
+          {% bootstrap_field form.slug %}
+          {% bootstrap_field form.site %}
+          {% bootstrap_field form.logo %}
+        </div>
+        <div class="col-xs-9 col-sm-6 col-md-3">
+          {% bootstrap_field form.description %}
+        </div>
+    </div>
+    <div class="form-group center_div">
+      <input type="submit" value="Salvar" class="btn btn-primary ">
+        {% if escola %}
+          <a href="{% url 'escola_cadastro' escola.id %}" class="btn btn-secondary">Cancelar</a>
+        {% else %}
+          <a href="{% url 'escolas_list' %}" class="btn btn-secondary">Cancelar</a>
+        {% endif%}
+    </div>
+  </form>
+
 {% endblock content %}
 
 {% block extra_js %}
