ref #26, arruma vários formulários, remove bug da vvies de autorizados

--- a/escolar/escolas/templates/escolas/autorizado_form.html
+++ b/escolar/escolas/templates/escolas/autorizado_form.html
@@ -13,33 +13,33 @@
 {% block content %}
 
 <div class="container">
-   {% include "base_adm.html" %}
+  {% include "base_adm.html" %}
     <div class="row-fluid span10">
-          {% include "base_aluno.html" %}
-        Aluno: <b>{{ aluno.nome }}</b><br>
-        Classe: <b>{{ classe|default:"--" }}</b><br>
+    {% include "base_aluno.html" %}
+      Aluno: <b>{{ aluno.nome }}</b><br>
+      Classe: <b>{{ classe|default:"--" }}</b><br>
  
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="row-fluid ">
-                <div class="controls cwell">
-                    <div class="row-fluid">
-                        {{ form.nome|as_bootstrap }}
-                        {{ form.email|as_bootstrap }}
-                        {{ form.celular|as_bootstrap }}
-                        {{ form.documento|as_bootstrap }}
-                    </div>
-
-                </div>
-                <div class="form-actions">
-                    <input type="submit" value="Salvar" class="btn btn-primary">
-                        <a href="{% url 'autorizados_aluno_list' escola.id aluno.id %}" class="btn btn-secondary">Cancelar</a>
-
-                </div>
+      <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="form-group">
+          <div class="row">
+            <!-- {# Celular, Tablet, Computador #} -->
+            <div class="col-xs-9 col-sm-6 col-md-3">
+              {% bootstrap_field form.nome %}
+              {% bootstrap_field form.email %}
+              {% bootstrap_field form.celular %}
+              {% bootstrap_field form.documento %}
             </div>
-        </form>
-    </div>
+          </div>
+        <div class="form-actions">
+          <input type="submit" value="Salvar" class="btn btn-primary">
+            <a href="{% url 'autorizados_aluno_list' escola.id aluno.id %}" class="btn btn-secondary">Cancelar</a>
+       </div>
+      </div>
+    </form>
+  </div>
 </div>
+
 {% endblock content %}
 
 {% block extra_js %}
