--- a/escolar/core/templates/base_adm.html
+++ b/escolar/core/templates/base_adm.html
@@ -8,7 +8,7 @@
     <li class="{{ tab_responsaveis }}"><a href="{% url 'alunos_list' escola.id %}">Responsáveis</a></li>
     {% endif %}
 </ul> -->
-
+<div class="row-fluid span10">
 <div class="form-group center_div">
     <ul class="nav nav-tabs">
     {% if escola.id %}
@@ -21,4 +21,5 @@
         <li class="{{ tab_autorizados }}"><a href="{% url 'autorizados_list' escola.id %}">Autorizados</a></li>
     {% endif %}
     </ul>
+</div>
 </div>
