--- a/escolar/core/templates/nav_gestor.html
+++ b/escolar/core/templates/nav_gestor.html
@@ -18,7 +18,7 @@
             <li class="dropdown {{ menu_administracao }}">
                 <li><a href="{% url 'grupos_list' %}">Grupos</a></li>
                 <li><a href="{% url 'escolas_list' %}">Escolas</a></li>
-                <li class="dropdown">
+               <!--  <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administração <b class="caret"></b></a>  
                   <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
@@ -29,7 +29,7 @@
                     <li><a href="#">Separated link</a></li>
                     <li><a href="#">One more separated link</a></li>
                   </ul>
-                </li>
+                </li> -->
 
             </li>
             <!-- {# dropdown ADM fim #} -->
