--- a/escolar/escolas/templates/escolas/autorizados_do_aluno_list.html
+++ b/escolar/escolas/templates/escolas/autorizados_do_aluno_list.html
@@ -37,7 +37,7 @@
         {% for autorizado in autorizados %}
           <tr>
             {% if request.user == autorizado.responsavel %}
-              <td><a href="#">{{ autorizado.autorizado.nome }}</a></td>
+              <td><a href="{% url 'autorizado_form' escola.pk aluno.pk autorizado.pk %}">{{ autorizado.autorizado.nome }}</a></td>
             {% else %}
               <td>{{ autorizado.autorizado.nome }}</td>
             {% endif %}
