--- a/escolar/escolas/templates/escolas/base_adm.html
+++ b/escolar/escolas/templates/escolas/base_adm.html
@@ -5,7 +5,7 @@
 
 <div class="container">
   <ul class="nav nav-tabs">
-    <li><a href="{% url 'escolas_list' %}" id='escola' data-toggle="tab">Escola</a></li>
+    <li><a href="{% url 'escolas_list' %}" id='escola' data-toggle="tab">Essscola</a></li>
     <li><a href="#classes" data-toggle="tab">Classes</a></li>
     <li><a href="#professores" data-toggle="tab">Professores</a></li>
     <li><a href="#alunos" data-toggle="tab">Alunos</a></li>
