--- a/escolar/escolas/templates/escolas/escola_cadastro.html
+++ b/escolar/escolas/templates/escolas/escola_cadastro.html
@@ -30,7 +30,7 @@
         {% endif %}
         {% if can_edit %}
         <div class="form-actions">
-            <a href="{% url 'escola_form' escola.pk %}" class="btn btn-secondary">Editar</a>
+            <a href="{% url 'escola_form' escola.pk %}" class="btn btn-mini btn-success">Editar</a>
         </div>
         {% endif %}
     </div>
