--- a/escolar/escolas/templates/escolas/escola_form.html
+++ b/escolar/escolas/templates/escolas/escola_form.html
@@ -2,56 +2,56 @@
 {% load bootstrap3 %}
 
 {% block page_title %}
-  <div class="page-header center_div">
+
     <!-- TODO erver esse br -->
     <br>
-    {% if escola %}
-        Escola: {{ escola.nome }}
-    {% else %}
-        Cadastro de Escola
-    {% endif %}
-  </div>
+
+ 
 {% endblock page_title %}
 
 
 {% block content %}
-
+<div class="container">
   {% include "base_adm.html" %}
+  <div class="row-fluid span10">
 
-  <form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="form-group center_div">
-      <div class="row">
-        <!-- {# Celular, Tablet, Computador #} -->
-        <div class="col-xs-9 col-sm-6 col-md-3">
-          {% bootstrap_field form.pais %}
-          {% bootstrap_field form.nome %}
-          {% bootstrap_field form.endereco %}
-          {% bootstrap_field form.numero %}
-        </div>
-        <div class="col-xs-9 col-sm-6 col-md-3">
-          {% bootstrap_field form.telefone %}
-          {% bootstrap_field form.complemento %}
-          {% bootstrap_field form.bairro %}
-        </div>
-        <div class="col-xs-9 col-sm-6 col-md-3">
-          {% bootstrap_field form.slug %}
-          {% bootstrap_field form.site %}
-          {% bootstrap_field form.logo %}
-        </div>
-        <div class="col-xs-9 col-sm-6 col-md-3">
-          {% bootstrap_field form.description %}
-        </div>
-    </div>
-    <div class="form-group center_div">
-      <input type="submit" value="Salvar" class="btn btn-primary ">
-        {% if escola %}
-          <a href="{% url 'escola_cadastro' escola.id %}" class="btn btn-secondary">Cancelar</a>
-        {% else %}
-          <a href="{% url 'escolas_list' %}" class="btn btn-secondary">Cancelar</a>
-        {% endif%}
-    </div>
-  </form>
+    <form method="POST" enctype="multipart/form-data">
+      {% csrf_token %}
+      <div class="form-group center_div">
+        <div class="row">
+          <!-- {# Celular, Tablet, Computador #} -->
+          <div class="col-xs-9 col-sm-6 col-md-3">
+            {% bootstrap_field form.pais %}
+            {% bootstrap_field form.nome %}
+            {% bootstrap_field form.endereco %}
+            {% bootstrap_field form.numero %}
+          </div>
+          <div class="col-xs-9 col-sm-6 col-md-3">
+            {% bootstrap_field form.telefone %}
+            {% bootstrap_field form.complemento %}
+            {% bootstrap_field form.bairro %}
+          </div>
+          <div class="col-xs-9 col-sm-6 col-md-3">
+            {% bootstrap_field form.slug %}
+            {% bootstrap_field form.site %}
+            {% bootstrap_field form.logo %}
+          </div>
+          <div class="col-xs-9 col-sm-6 col-md-3">
+            {% bootstrap_field form.description %}
+          </div>
+      </div>
+      <div class="form-group center_div">
+        <input type="submit" value="Salvar" class="btn btn-primary ">
+          {% if escola %}
+            <a href="{% url 'escola_cadastro' escola.id %}" class="btn btn-secondary">Cancelar</a>
+          {% else %}
+            <a href="{% url 'escolas_list' %}" class="btn btn-secondary">Cancelar</a>
+          {% endif%}
+      </div>
+    </form>
+  </div>
+</div>
+
 
 {% endblock content %}
 
