ref #27 início, falta colocar a escola no contexto

--- a/escolar/core/templates/nav_gestor.html
+++ b/escolar/core/templates/nav_gestor.html
@@ -46,7 +46,13 @@
         <ul class="nav navbar-nav navbar-right">
           <!-- <li><a href="#">Link</a></li> -->
           {% if user.is_authenticated %}
-            <li><a href=''>{{ escola }}</a></li>
+            {% if user.get_unica_escola %}
+              <li><a href="{% url 'escola_cadastro' user.get_unica_escola %}">{{ escola }}</a></li>
+            {% else %}
+              {% if escola %}
+                <li><a href="{% url 'escola_cadastro' escola.id %}">{{ escola }}</a></li>
+              {% endif %}
+            {% endif %}
             <li{% if active_perfil %} class="active"{% endif %}><a href="#"><i class="glyphicon glyphicon-user"></i> {{ request.user.email }}</a></li>
             <li><a href="{% url 'logout' %}"><i class="glyphicon glyphicon-off"></i> Sair </a></li>
           {% else %}
