--- a/escolar/escolas/templates/escolas/escola_form.html
+++ b/escolar/escolas/templates/escolas/escola_form.html
@@ -32,6 +32,7 @@
             {% bootstrap_field form.bairro %}
           </div>
           <div class="col-xs-9 col-sm-6 col-md-3">
+            {% bootstrap_field form.publica %}
             {% bootstrap_field form.slug %}
             {% bootstrap_field form.site %}
             {% bootstrap_field form.logo %}
